<resources>
    <string name="app_name">提醒一下</string>
    <string name="notice_title">标题</string>
    <string name="notice_context">内容</string>
    <string name="confirm">确认</string>
    <string name="reflash">恢复</string>
    <string name="delete">删除</string>
    <string name="new_tip">新建</string>
    <string name="notice_text">提醒</string>
    <string name="which_day">哪天</string>
    <string name="which_hour">哪时</string>
    <string name="setting">设置</string>
    <string name="unsetting">未设置</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="which_circleTime">循环间隔</string>
    <string name="which_times">循环次数</string>
    <string name="day">天</string>
    <string name="hour">小时</string>
    <string name="minute">分钟</string>
    <string name="times">次</string>
    <string name="circle">循环</string>
</resources>
